[package]
name = "firmatario"
version = "0.0.1"
license = "MIT"
edition = "2018"
authors = ["Patrick Chieppe <patrick.chieppe@hotmail.com>"]
readme = "README.md"
repository = "https://github.com/Palladinium/firmatario"
homepage = "https://github.com/Palladinium/firmatario"
description = "A client library for communicating with devices using the firmata protocol"
